gitops/manifests/security/policies/argocd-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-ingress
  namespace: argocd
spec:
  podSelector: {}
  policyTypes:
  - Ingress
